Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138384

Incorrect documentation about one row surfaces

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.10.0 Beta2, 6.11.0 FF
    • 6.10
    • Graphs: 3D
    • None
    • e56dfa754 (dev), 2060a374d (6.10)

      Note about surfaces requiring at least 2 rows or columns is not correct anymore:

      Note: Surfaces with less than two rows or columns are not considered valid surfaces and will not be rendered.

        For Gerrit Dashboard: QTBUG-138384
        # Subject Branch Project Status CR V

            spouke Sakaria Pouke
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes