Update documentation for one dimensional surfaces

Fixes: QTBUG-138384
Pick-to: 6.10
Change-Id: I8e37ee55a29708f5006eba7b4f00c5fc9675df2b
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>